<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aisleconnect.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
      		android:id="@+id/textView1"
      		android:layout_width="match_parent"
      		android:layout_height="wrap_content"
      		android:text="@string/account" />
        
        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/account_text"
            android:inputType="text" />

        <TextView
      		android:id="@+id/textView2"
      		android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:text="@string/password" />
 
		<EditText
		    android:id="@+id/editText2"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:ems="10"
		    android:text="@string/password_text"
		    android:inputType="textPassword" />

		<Button
      		android:id="@+id/button"
      		android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:layout_marginTop="10dp"
      		android:text="@string/sign" />  


    </LinearLayout>

</RelativeLayout>